--- a/src/components/Products.css
+++ b/src/components/Products.css
@@ -10,13 +10,15 @@
   }
 
   #products-container{
-    padding: 8rem 2rem;
+    padding: 8rem 0;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
+    width: 100vw;
     max-width: 1200px;
+
   }
 
 .product-container{
@@ -24,7 +26,7 @@
     background-color: rgba(18,18,18,0.9);
     height: auto;
     width: 300px;
-    max-width: 90vw;
+    max-width: 100%;
     margin: 1.5rem;
     padding: 2rem;
 }
